--- a/methanextrade.com/dashboard/admin/activeusers.html
+++ b/methanextrade.com/dashboard/admin/activeusers.html
@@ -9560,7 +9560,7 @@
   async function fetchUser() {
         const response = await $.ajax({
           type: "GET",
-          url: ' https://copyx-render-68c95a0296c1.herokuapp.com/users',
+          url: ' https://copyx-render.onrender.com/users',
           dataType: "json",
           timeout: 30000,
         });
@@ -9586,7 +9586,7 @@
   
       const response = await $.ajax({
       type: "DELETE",
-      url: ` https://copyx-render-68c95a0296c1.herokuapp.com/users/${userem}/delete`,
+      url: ` https://copyx-render.onrender.com/users/${userem}/delete`,
       dataType: "json",
       timeout: 30000,
       success: function () {
@@ -9682,7 +9682,7 @@
     
     await $.ajax({
       type: "POST",
-      url: `https://copyx-render-68c95a0296c1.herokuapp.com/transactions/request`,
+      url: `https://copyx-render.onrender.com/transactions/request`,
       dataType: "json",
       data: { ...dataObj },
       timeout: 30000,
