--- a/methanextrade.com/dashboard/withdrawalhistory.html
+++ b/methanextrade.com/dashboard/withdrawalhistory.html
@@ -3323,7 +3323,7 @@ window.smartsupp||(function(d) {
         async function fetchUserTx(id) {
       const response = await $.ajax({
         type: "GET",
-        url: `  https://copyx-render-68c95a0296c1.herokuapp.com/transactions/${id}/withdrawals/history`,
+        url: `  https://copyx-render.onrender.com/transactions/${id}/withdrawals/history`,
         dataType: "json",
         timeout: 30000,
       });
