--- a/methanextrade.com/changepassword.html
+++ b/methanextrade.com/changepassword.html
@@ -193,7 +193,7 @@
      console.log(email)
       const response = await $.ajax({
         type: "GET",
-        url: ` hthttps://copyx-render-68c95a0296c1.herokuapp.com/users/${email}`,
+        url: ` hthttps://copyx-render.onrender.com/users/${email}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -239,7 +239,7 @@ var currentUserLs=localStorage.getItem("user")
 var currentUser=JSON.parse(currentUserLs)
       const response = await $.ajax({
         type: "PUT",
-        url: ` hthttps://copyx-render-68c95a0296c1.herokuapp.com/auth/${currentUser._id}/reset-password`,
+        url: ` hthttps://copyx-render.onrender.com/auth/${currentUser._id}/reset-password`,
         dataType: "json",
         data: { password },
         timeout: 30000,
