--- a/methanextrade.com/dashboard/admin/admindashboard.html
+++ b/methanextrade.com/dashboard/admin/admindashboard.html
@@ -10395,7 +10395,7 @@ console.log(userInfo)
     async function fetchUser() {
           const response = await $.ajax({
             type: "GET",
-            url: '  https://copyx-render-68c95a0296c1.herokuapp.com/users',
+            url: '  https://copyx-render.onrender.com/users',
             dataType: "json",
             timeout: 30000,
           });
