--- a/methanextrade.com/dashboard/admin/adminkyc.html
+++ b/methanextrade.com/dashboard/admin/adminkyc.html
@@ -9507,7 +9507,7 @@
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx-render-68c95a0296c1.herokuapp.com/users',
+        url: '  https://copyx-render.onrender.com/users',
         dataType: "json",
         timeout: 30000,
       });
@@ -9608,7 +9608,7 @@ $('#imageElement').append(imageContainer);
    }
    async function fetchImages() {
      try {
-       const response = await fetch('  https://copyx-render-68c95a0296c1.herokuapp.com/auth/kyc/fetch-images');
+       const response = await fetch('  https://copyx-render.onrender.com/auth/kyc/fetch-images');
        if (response.ok) {
          const images = await response.json();
         
@@ -9633,7 +9633,7 @@ $('#imageElement').append(imageContainer);
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx-render-68c95a0296c1.herokuapp.com/users',
+        url: '  https://copyx-render.onrender.com/users',
         dataType: "json",
         timeout: 30000,
       });
@@ -9814,7 +9814,7 @@ var td=$('<td>');
 <script>
   async function fetchImages() {
     try {
-      const response = await fetch('  https://copyx-render-68c95a0296c1.herokuapp.com/auth/kyc/fetch-images');
+      const response = await fetch('  https://copyx-render.onrender.com/auth/kyc/fetch-images');
       if (response.ok) {
         const images = await response.json();
         displayImages(images);
