--- a/methanextrade.com/dashboard/admin/edit.html
+++ b/methanextrade.com/dashboard/admin/edit.html
@@ -9586,7 +9586,7 @@
 
       const response = await $.ajax({
         type: "GET",
-        url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${userFromLS.email}`,
+        url: `  https://copyx-render.onrender.com/users/${userFromLS.email}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -9622,7 +9622,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${currentUser._id}/profile/update`,
+        url: `  https://copyx-render.onrender.com/users/${currentUser._id}/profile/update`,
         dataType: "json",
         data: { firstName, lastName, email },
         timeout: 30000,
@@ -9655,7 +9655,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${currentUser._id}/accounts/update`,
+        url: `  https://copyx-render.onrender.com/users/${currentUser._id}/accounts/update`,
         dataType: "json",
         data: { 'values': JSON.stringify(cummulative) },
         timeout: 30000,
@@ -9709,7 +9709,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `  https://copyx-render-68c95a0296c1.herokuapp.com/auth/${currentUser._id}/reset-password`,
+        url: `  https://copyx-render.onrender.com/auth/${currentUser._id}/reset-password`,
         dataType: "json",
         data: { password },
         timeout: 30000,
