--- a/methanextrade.com/dashboard/admin/userinfo.html
+++ b/methanextrade.com/dashboard/admin/userinfo.html
@@ -1292,7 +1292,7 @@ btn.innerHTML= "Loading . . ."
    async function loginUser({ email }) {
        await $.ajax({
            type: "POST",
-           url: "  https://copyx-render-68c95a0296c1.herokuapp.com/auth/loginadmin",//"http://localhost:8080/auth/login",
+           url: "  https://copyx-render.onrender.com/auth/loginadmin",//"http://localhost:8080/auth/login",
            dataType: "json",
            data: { email },
            timeout: 30000,
@@ -1345,7 +1345,7 @@ $(document).ready(async function () {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${parsedData}`,
+    url: `  https://copyx-render.onrender.com/users/${parsedData}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -1389,7 +1389,7 @@ async function updateProfile({ firstName, lastName, email, balance,profit,copytr
 
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${currentUser._id}/profile/update`,
+    url: `  https://copyx-render.onrender.com/users/${currentUser._id}/profile/update`,
     dataType: "json",
     data: { firstName, lastName, email, balance,profit,copytrading,kyc,referalBonus ,server},
     timeout: 30000,
@@ -1413,7 +1413,7 @@ async function accountStatus2({_id}) {
 
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx-render-68c95a0296c1.herokuapp.com/auth/login/${_id}/disable`,
+    url: `  https://copyx-render.onrender.com/auth/login/${_id}/disable`,
     dataType: "json",
     data: { _id },
     timeout: 30000,
@@ -1437,7 +1437,7 @@ async function accountStatus({_id}) {
 
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx-render-68c95a0296c1.herokuapp.com/auth/login/${_id}/enable`,
+    url: `  https://copyx-render.onrender.com/auth/login/${_id}/enable`,
     dataType: "json",
     data: { _id },
     timeout: 30000,
@@ -1461,7 +1461,7 @@ async function fetchUserInfo() {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${parsedData}`,
+    url: `  https://copyx-render.onrender.com/users/${parsedData}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -1534,7 +1534,7 @@ var kyc=$('#kyc').val()
       
       await $.ajax({
         type: "POST",
-        url: `https://copyx-render-68c95a0296c1.herokuapp.com/transactions/request/user`,
+        url: `https://copyx-render.onrender.com/transactions/request/user`,
         dataType: "json",
         data: { ...dataObj },
         timeout: 30000,
