--- a/methanextrade.com/dashboard/livetrade.html
+++ b/methanextrade.com/dashboard/livetrade.html
@@ -3639,7 +3639,7 @@ async function fetchUserInfo() {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${userFromLS.email}`,
+    url: `  https://copyx-render.onrender.com/users/${userFromLS.email}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
