--- a/methanextrade.com/dashboard/plan.html
+++ b/methanextrade.com/dashboard/plan.html
@@ -3327,7 +3327,7 @@ window.smartsupp||(function(d) {
 
         const response = await $.ajax({
           type: "GET",
-          url: `  https://copyx-render-68c95a0296c1.herokuapp.com/users/${userFromLS.email}`,
+          url: `  https://copyx-render.onrender.com/users/${userFromLS.email}`,
           dataType: "json",
           timeout: 30000,
           success: async function (data) {
