--- a/methanextrade.com/dashboard/trader-profile.html
+++ b/methanextrade.com/dashboard/trader-profile.html
@@ -3933,7 +3933,7 @@ processing()
                             
                             await $.ajax({
                               type: "POST",
-                              url: `  https://copyx-render-68c95a0296c1.herokuapp.com/transactions/${dataObj.userId}/auto`,
+                              url: `  https://copyx-render.onrender.com/transactions/${dataObj.userId}/auto`,
                               dataType: "json",
                               data: { ...dataObj },
                               timeout: 30000,
