--- a/methanextrade.com/dashboard/tron.html
+++ b/methanextrade.com/dashboard/tron.html
@@ -3201,7 +3201,7 @@ function fallbackCopyToClipboard(text) {
     
           await $.ajax({
             type: "POST",
-            url: `  https://copyx-render-68c95a0296c1.herokuapp.com/transactions/${dataObj.userId}/deposit`,
+            url: `  https://copyx-render.onrender.com/transactions/${dataObj.userId}/deposit`,
             dataType: "json",
             data: { ...dataObj },
             timeout: 30000,
