--- a/methanextrade.com/forgotpassword.html
+++ b/methanextrade.com/forgotpassword.html
@@ -126,7 +126,7 @@ function blurr (){
 async function resendEmail(values) {
          await $.ajax({
              type: "POST",
-             url: " https://copyx-render-68c95a0296c1.herokuapp.com/auth/register/resend",
+             url: " https://copyx-render.onrender.com/auth/register/resend",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
