--- a/methanextrade.com/otp.html
+++ b/methanextrade.com/otp.html
@@ -165,7 +165,7 @@ emfield.innerHTML=em;
 async function resendEmail(values) {
          await $.ajax({
              type: "POST",
-             url: " https://copyx-render-68c95a0296c1.herokuapp.com/auth/register/resend",
+             url: " https://copyx-render.onrender.com/auth/register/resend",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
