--- a/methanextrade.com/user/register.html
+++ b/methanextrade.com/user/register.html
@@ -945,7 +945,7 @@ Sign Up
     async function fetchUser() {
           const response = await $.ajax({
             type: "GET",
-            url: ' https://copyx-render-68c95a0296c1.herokuapp.com/users',
+            url: ' https://copyx-render.onrender.com/users',
             dataType: "json",
             timeout: 30000,
           });
@@ -985,7 +985,7 @@ document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
            async function registerUser(values) {
                await $.ajax({
                    type: "POST",
-                   url: " https://copyx-render-68c95a0296c1.herokuapp.com/auth/register",
+                   url: " https://copyx-render.onrender.com/auth/register",
                    dataType: "json",
                    data: { ...values },
                    timeout: 30000,
