--- a/methanextrade.com/dashboard/admin/adminkyc.html
+++ b/methanextrade.com/dashboard/admin/adminkyc.html
@@ -9577,6 +9577,14 @@ var td=$('<td>');
 
   </script>
 <script>
+    function sendUserDetail(userem){
+        
+  
+        localStorage.setItem("userem",userem)
+        location.href="userinfo.html" 
+   
+   
+   }
   function displayImages(images) {
      const galleryDiv = document.getElementById('imageGallery');
  console.log(images);
@@ -9600,6 +9608,8 @@ let ownerElement = $('<h3></h3>').text(`Owner: ${image.owner}`);
 imageContainer.append(ownerElement);
 let docNumElement = $('<p></p>').text(`Document Number: ${image.docNum}`);
 imageContainer.append(docNumElement);
+let viewElement = $('<button class="btn-primary btn-lg pl-10 w-20 mr-3 m-5" onclick="sendUserDetail(\''+image.docEmail+'\')"  > <i class=" fas fa-eye"></i></button>').text(`View User`);
+imageContainer.append(viewElement);
 
 
 // Append the image container to the main imgElement div
