--- a/methanextrade.com/dashboard/kyc.html
+++ b/methanextrade.com/dashboard/kyc.html
@@ -3100,13 +3100,13 @@ else{
         const cloudName = 'dsyjlantq';  // Your Cloudinary cloud name
         const uploadPreset = 'assetspur';  // Your Cloudinary upload preset
 
-        function storeImg(imageUrl,owner,docNum) {
-  console.log();(imageUrl,owner,docNum);
+        function storeImg(imageUrl,owner,docNum,docEmail) {
+  console.log();(imageUrl,owner,docNum,docEmail);
   $.ajax({
     type: 'POST',
     url: ' https://copyx-render.onrender.com/auth/kyc',
     dataType: 'json',
-    data: { imageUrl,owner,docNum },
+    data: { imageUrl,owner,docNum,docEmail },
     timeout: 30000,
     success: function (data) {
       console.log(data);
@@ -3244,6 +3244,7 @@ const userFromLS = localStorage.getItem("user");
 const parsedData = JSON.parse(userFromLS);
 const imgUrls=getUrl;
 const userId = parsedData._id;
+var docEmail=parsedData.email;
 const imageUrl = getUrl;
       localStorage.setItem("imgUrl",imageUrl)
 
@@ -3256,7 +3257,7 @@ const imageUrl = getUrl;
 // const category = document.getElementById("category").value;
 const timeStamp = new Date();
 
-storeImg(imageUrl,owner,docNum);
+storeImg(imageUrl,owner,docNum,docEmail);
 
 
                 // Store the array of image URLs in local storage
