--- a/methanextrade.com/dashboard/autocopyhistory.html
+++ b/methanextrade.com/dashboard/autocopyhistory.html
@@ -3431,7 +3431,7 @@ $(document).ready(async function () {
 
   const response = await $.ajax({
     type: "GET",
-    url: `   https://whaleoptions-trader-74076c730035.herokuapp.com/users/${traderIdent}`,
+    url: `https://whaleoptions-trader.onrender.com/users/${traderIdent}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
