--- a/methanextrade.com/dashboard/admin/add.html
+++ b/methanextrade.com/dashboard/admin/add.html
@@ -9568,7 +9568,7 @@
     
       const response = await $.ajax({
         type: "GET",
-        url: `   https://whaleoptions-trader-74076c730035.herokuapp.com/users/${parsedData}`,
+        url: `https://whaleoptions-trader.onrender.com/users/${parsedData}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
