--- a/methanextrade.com/dashboard/copytransactions.html
+++ b/methanextrade.com/dashboard/copytransactions.html
@@ -3768,7 +3768,7 @@ $(document).ready(async function () {
 
 //   const response = await $.ajax({
 //     type: "GET",
-//     url: `   https://whaleoptions-trader-74076c730035.herokuapp.com/users/${traderIdent}`,
+//     url: `https://whaleoptions-trader.onrender.com/users/${traderIdent}`,
 //     dataType: "json",
 //     timeout: 30000,
 //     success: async function (data) {
