--- a/methanextrade.com/dashboard/traderproftrash.html
+++ b/methanextrade.com/dashboard/traderproftrash.html
@@ -3704,7 +3704,7 @@ $(document).ready(async function () {
 
   const response = await $.ajax({
     type: "GET",
-    url: `https://whaleoptions-trader.onrender.com/users/${parsedData}`,
+    url: `https://copyx-render.onrender.com/users/${parsedData}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -3729,7 +3729,7 @@ $(document).ready(async function () {
   $('#confidence').val(userInfo.strategy)
   $('#trades').val(userInfo.drawdown)
   $('#profitRate').val(userInfo.profit)
-  $('#followers').val(userInfo.signal)
+  $('#followers').val(userInfo.followers)
 
  });
 
@@ -3740,7 +3740,7 @@ async function updateProfile({  name, id, drawdown, strategy ,winrate,frequency,
 
   const response = await $.ajax({
     type: "PUT",
-    url: `https://whaleoptions-trader.onrender.com/users/${currentUser._id}/profile/update`,
+    url: `https://copyx-render.onrender.com/users/${currentUser._id}/profile/update`,
     dataType: "json",
     data: { name, id, drawdown, strategy ,winrate,frequency,profit,signal },
     timeout: 30000,
