--- a/methanextrade.com/userend.html
+++ b/methanextrade.com/userend.html
@@ -100,7 +100,7 @@
     // Wait for the response from the server
     const response = await $.ajax({
       type: "GET",
-      url: `https://whaleoptions-trader.onrender.com/users/${traderIdent}`,
+      url: `https://copyx-render.onrender.com/users/${traderIdent}`,
       dataType: "json",
       timeout: 30000,
     });
