--- a/methanextrade.com/dashboard/dashboard.html
+++ b/methanextrade.com/dashboard/dashboard.html
@@ -4462,7 +4462,7 @@
          
 
 
-          <div class="alert bg-blue border border--info" role="alert" style="display:"id="trader">
+          <div class="alert bg-blue border border--info" role="alert" style="display:none"id="trader">
                         <div class="alert__icon d-flex align-items-center text--info"><i
                                 class="fas fa-file-signature"></i></div>
                         <p class="alert__message">
