traders appending well

--- a/methanextrade.com/dashboard/admin/trader.html
+++ b/methanextrade.com/dashboard/admin/trader.html
@@ -1004,7 +1004,7 @@
                                       <tr>
                                         <th class="align-middle">Frequency:</th>
                                         <td>
-                                            <input class="form-control" name="name" id="signal">
+                                            <input class="form-control" name="name" id="frequency">
                                         </td>
                                     </tr>
                      
