--- a/methanextrade.com/dashboard/admin/traderinfo.html
+++ b/methanextrade.com/dashboard/admin/traderinfo.html
@@ -951,7 +951,7 @@
                                                 <tr>
                                                   <th class="align-middle">Followers:</th>
                                                   <td>
-                                                      <input class="form-control" name="name" value="" id="signal">
+                                                      <input class="form-control" name="name" value="" id="followers">
                                                   </td>
                                               </tr>
 												  <tr>
@@ -1001,7 +1001,7 @@
                                         <tr>
                                           <th class="align-middle">Frequency:</th>
                                           <td>
-                                              <input class="form-control" name="name" id="signal" placeholder="">
+                                              <input class="form-control" name="name" id="frequency" placeholder="">
                                           </td>
                                       </tr>
                                                 <tr>
