--- a/methanextrade.com/dashboard/trader-profile.html
+++ b/methanextrade.com/dashboard/trader-profile.html
@@ -2976,7 +2976,7 @@ body.dark .alert-warning {
                   <div class="wallets__progress bg-blue" style="width: 99%;height: 12%;text-align: center;" id="profit-bar"></div>
                 </div>
                 <div class="wallets__box">
-                  <div class="wallets__info">Frequency (<span id="signal"></span>)</div>
+                  <div class="wallets__info">Frequency (<span id="frequency"></span>)</div>
                   <div class="wallets__progress bg-blue" style="width: 99%;height: 12%;text-align: center;" id="profit-bar"></div>
                 </div>
               </div>
