--- a/methanextrade.com/dashboard/copytransactions.html
+++ b/methanextrade.com/dashboard/copytransactions.html
@@ -3501,7 +3501,7 @@ localStorage.setItem("trader",JSON.stringify(response.data))
   } catch (error) {
     // Handle any errors that occurred during the request
     console.error("Error fetching user data:", error);
-    alert("An error occurred while fetching user data.");
+    console.log("An error occurred while fetching user data.");
   }
 }
 
