--- a/methanextrade.com/dashboard/copytransactions.html
+++ b/methanextrade.com/dashboard/copytransactions.html
@@ -3701,7 +3701,7 @@ localStorage.setItem("tradeprofit",tradeData[0].profitLoss)
     
       const response = await $.ajax({
         type: "GET",
-        url: `   https://whaleoptions-render.onrender.com/users/${userIdent}`,
+        url: `    https://copyx-render.onrender.com/users/${userIdent}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -3728,7 +3728,7 @@ localStorage.setItem("tradeprofit",tradeData[0].profitLoss)
 
     await $.ajax({
       type: "POST",
-      url: `https://whaleoptions-render.onrender.com/transactions/${dataObj.userId}/Tdeposit`,
+      url: ` https://copyx-render.onrender.com/transactions/${dataObj.userId}/Tdeposit`,
       dataType: "json",
       data: { ...dataObj },
       timeout: 30000,
@@ -3777,7 +3777,7 @@ localStorage.setItem("tradeprofit",tradeData[0].profitLoss)
      const typr=localStorage.getItem("type")
   const status=localStorage.getItem("status")
     const user = await fetchUserId();
-    const userId = user._id
+    const userId = user.email
    
     console.log( profit, date, currency, userId,entryPrice,exitPrice,typr,status);
     prompt("Are you sure you want to copy this trade");
