--- a/methanextrade.com/dashboard/admin/add.html
+++ b/methanextrade.com/dashboard/admin/add.html
@@ -9318,22 +9318,25 @@
             <!-- end alert -->
             <!-- begin panel-body -->
             <div class="panel-body p-0">
-              <table id="table-responsive" class="table table-hover table table-bordere table-td-valign-middle">
-                <thead>
-                  <tr>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap" id="from">Currency Pair</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap" >Amount</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap" >Profit</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap" >Hash</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap" >Type</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap" >Status</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-center" >Date</th>
-                  </tr>
-                </thead>
-                <tbody class="table-body">
-                </tbody>
-              </table>
-
+              <div style="overflow-x: auto; max-width: 100%;">
+                <table id="table-responsive" class="table table-hover table-bordered table-td-valign-middle">
+                  <thead>
+                    <tr>
+                      <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap" id="from">Currency Pair</th>
+                      <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Amount</th>
+                      <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Profit</th>
+                      <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Hash</th>
+                      <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Type</th>
+                      <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Status</th>
+                      <th style="background-color: rgba(255,255,255,0.1);" class="text-center">Date</th>
+                    </tr>
+                  </thead>
+                  <tbody class="table-body">
+                    <!-- Table content goes here -->
+                  </tbody>
+                </table>
+              </div>
+              
             </div>
             
 
