--- a/methanextrade.com/dashboard/admin/activeusers.html
+++ b/methanextrade.com/dashboard/admin/activeusers.html
@@ -9195,7 +9195,7 @@
           <div class="dropdown-menu dropdown-menu-right">
             <a href="edit.html" class="dropdown-item"><i class="fa fa-edit" aria-hidden="true"></i>&nbsp;&nbsp;Edit
               Account</a>
-            <a href="login.html" class="dropdown-item" ><i class="fa fa-power-off"
+            <a href="./user/login.html" class="dropdown-item" ><i class="fa fa-power-off"
                 aria-hidden="true"></i>&nbsp;&nbsp;Log
               Out</a>
             
