--- a/methanextrade.com/register.html
+++ b/methanextrade.com/register.html
@@ -427,7 +427,7 @@
             </div>
             <div class="col-12 mt-4">
                 <p class="text-center text-white">
-                    Already have an account? <a href="login.html" class="fw-bold text--base">
+                    Already have an account? <a href="./user/login.html" class="fw-bold text--base">
                         Login
                         Account
                     </a>
