--- a/methanextrade.com/user/Verify.html
+++ b/methanextrade.com/user/Verify.html
@@ -37,7 +37,7 @@
             </style>
             <div class="container">
                 <span id="verification"><i>Verification in progress. Please wait...</i></span><br>
-               <!-- <span > Click  <a href="login.html">here</a> to login now</span> -->
+               <!-- <span > Click  <a href="./user/login.html">here</a> to login now</span> -->
             </div>
             
    <script>     
