--- a/methanextrade.com/user/register.html
+++ b/methanextrade.com/user/register.html
@@ -32,7 +32,7 @@
     <meta property="og:image:type" content="jpeg"/>
     <meta property="og:image:width" content="1180" />
     <meta property="og:image:height" content="600" />
-    <meta property="og:url" content="register.html">
+    <meta property="og:url" content="./user/register.html">
     
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -891,7 +891,7 @@ Sign Up
     <div class="text-dark text-center fw-semibold fs-6">
         Already have an account?
 
-        <a href="login.html" class="link-primary">
+        <a href="./user/login.html" class="link-primary">
             Sign In
         </a>
     </div>
@@ -916,7 +916,7 @@ Sign Up
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-                    <a href="login.html" class="btn btn--base">Login</a>
+                    <a href="./user/login.html" class="btn btn--base">Login</a>
                 </div>
             </div>
         </div>
