--- a/methanextrade.com/about.html
+++ b/methanextrade.com/about.html
@@ -240,7 +240,7 @@
                                                 <div class="FvJ-85Xh7Y"
                                                     style="width: 100%; align-items: center; justify-content: center; flex-direction: row; gap: 8px;">
                                                     <div class="ZfdK6Ae8Lh _9kNVmQo8-7">
-                                                                                                                    <a href="register.html" class="ekkZvIsihs" data-align="start"
+                                                                                                                    <a href="./user/register.html" class="ekkZvIsihs" data-align="start"
                                                             data-size="M Compact" data-style="Bold" data-test="Text"
                                                             style="color: inherit; display: block;">Registration</a>
                                                                                                             </div>
