--- a/methanextrade.com/index.html
+++ b/methanextrade.com/index.html
@@ -240,7 +240,7 @@
                                                 <div class="FvJ-85Xh7Y"
                                                     style="width: 100%; align-items: center; justify-content: center; flex-direction: row; gap: 8px;">
                                                     <div class="ZfdK6Ae8Lh _9kNVmQo8-7">
-                                                                                                                    <a href="register.html" class="ekkZvIsihs" data-align="start"
+                                                                                                                    <a href="./user/register.html" class="ekkZvIsihs" data-align="start"
                                                             data-size="M Compact" data-style="Bold" data-test="Text"
                                                             style="color: inherit; display: block;">Registration</a>
                                                                                                             </div>
@@ -269,11 +269,11 @@
                     Range Of Trading Offers, Options Trading, Stocks, Derivatives, Currency Pairs.
                 </p>
                 <div style="display: flex;">
-                                            <a href="register.html"
+                                            <a href="./user/register.html"
                             class="_633ZZh0WP6 com-c-button com-c-button_color_accent p-home-c-button-desktop p-home-m-devices__button"
                             type="button"
                             style="min-height: unset;margin-right:5px;background:#0094ff;border-radius:8px">Register</a>
-                        <a href="login.html"
+                        <a href="./user/login.html"
                             class="_633ZZh0WP6 com-c-button com-c-button_color_accent p-home-c-button-desktop p-home-m-devices__button"
                             type="button"
                             style="min-height: unset;background: #fff; color: #0094ff; outline: 2px solid #0094ff;border-radius:8px">Login</a>
@@ -1147,7 +1147,7 @@
                         <span class="price">40% - 45% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$50,000</li>
@@ -1161,7 +1161,7 @@
                         <span class="price">35% - 40% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$20,000</li>
@@ -1175,7 +1175,7 @@
                         <span class="price">30% - 35% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$10,000</li>
@@ -1189,7 +1189,7 @@
                         <span class="price">25% - 30% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$5,000</li>
@@ -1203,7 +1203,7 @@
                         <span class="price">20% - 25% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$3,000</li>
@@ -1221,7 +1221,7 @@
                         <span class="price">70% - 80% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$100,000</li>
@@ -1235,7 +1235,7 @@
                         <span class="price">60% - 70% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$50,000</li>
@@ -1249,7 +1249,7 @@
                         <span class="price">50% - 60% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$20,000</li>
@@ -1263,7 +1263,7 @@
                         <span class="price">40% - 45% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$10,000</li>
@@ -1277,7 +1277,7 @@
                         <span class="price">30% - 40% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$1,000</li>
@@ -1297,7 +1297,7 @@
                         <span class="price">200% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$150,000</li>
@@ -1311,7 +1311,7 @@
                         <span class="price">100% - 124% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$50,000</li>
@@ -1325,7 +1325,7 @@
                         <span class="price">150% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>minimum:$100,000</li>
@@ -1346,7 +1346,7 @@
                         <span class="price">90% - 95% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>30+ BTC</li>
@@ -1360,7 +1360,7 @@
                         <span class="price">70% - 75% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>5 - 14.9 BTC</li>
@@ -1373,7 +1373,7 @@
                         <span class="price">80% - 85% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>15 - 29.9 BTC</li>
@@ -1386,7 +1386,7 @@
                         <span class="price">65% - 70% PIPS</span>
 
                         <span class="pricing-table-divider"></span>
-                        <a class="btn" href="register.html"><b>Get Started</b></a>
+                        <a class="btn" href="./user/register.html"><b>Get Started</b></a>
                         <span class="pricing-table-divider"></span>
                         <ul>
                             <li>1 - 1.5 BTC</li>
