--- a/methanextrade.com/login.html
+++ b/methanextrade.com/login.html
@@ -138,7 +138,7 @@
             </div>
             <div class="col-12 mt-4">
                 <p class="text-center text-white">
-                    Don't have any account? <a href="register.html" class="fw-bold text--base">Create Account</a>
+                    Don't have any account? <a href="./user/register.html" class="fw-bold text--base">Create Account</a>
                 </p>
             </div>
         </div>
