--- a/methanextrade.com/user/auth.html
+++ b/methanextrade.com/user/auth.html
@@ -32,7 +32,7 @@
     <meta property="og:image:type" content="jpeg"/>
     <meta property="og:image:width" content="1180" />
     <meta property="og:image:height" content="600" />
-    <meta property="og:url" content="login.html">
+    <meta property="og:url" content="./user/login.html">
     
     <meta name="twitter:card" content="summary_large_image">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -375,7 +375,7 @@ SignIn
     <div class="text-dark text-center fw-semibold fs-6">
         Do not have an account?
 
-        <a href="register.html" class="link-primary">
+        <a href="./user/register.html" class="link-primary">
             Sign Up
         </a>
     </div>
