--- a/methanextrade.com/user/register.html
+++ b/methanextrade.com/user/register.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Follow Lead Traders and copy their trading activity with Expert CopyTrading">
     <meta name="keywords" content="investment">
     <link rel="shortcut icon" href="../assets/images/logoIcon/favicon.png" type="image/x-icon">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <link rel="apple-touch-icon" href="../assets/images/logoIcon/logo.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -916,14 +916,14 @@ Sign Up
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-                    <a href="./user/login.html" class="btn btn--base">Login</a>
+                    <a href="./login.html" class="btn btn--base">Login</a>
                 </div>
             </div>
         </div>
     </div>
 
              
-    <script src="../assets/global/js/jquery-3.6.0.min.js"></script>
+    <!-- <script src="../assets/global/js/jquery-3.6.0.min.js"></script> -->
     <script src="../assets/global/js/bootstrap.bundle.min.js"></script>
 
     <!-- Pluglin Link -->
