--- a/methanextrade.com/dashboard/deposithistory.html
+++ b/methanextrade.com/dashboard/deposithistory.html
@@ -3323,7 +3323,8 @@ window.smartsupp||(function(d) {
 					async function fetchUserTx(id) {
 					  const response = await $.ajax({
 						type: "GET",
-						url: `  https://copyx-render.onrender.com/transactions/${id}/deposit/history`,
+						url: `  https://copyx.onrender.com
+/transactions/${id}/deposit/history`,
 						dataType: "json",
 						timeout: 30000,
 					  });
