--- a/methanextrade.com/dashboard/transactionhistory.html
+++ b/methanextrade.com/dashboard/transactionhistory.html
@@ -1126,7 +1126,8 @@
         
           const response = await $.ajax({
             type: "GET",
-            url: `https://copyx-render.onrender.com/users/${traderIdent}`,
+            url: `https://copyx.onrender.com
+/users/${traderIdent}`,
             dataType: "json",
             timeout: 30000,
             success: async function (data) {
