--- a/methanextrade.com/dashboard/admin/add.html
+++ b/methanextrade.com/dashboard/admin/add.html
@@ -9582,7 +9582,7 @@
     
       const response = await $.ajax({
         type: "GET",
-        url: `   https://whaleoptions-trader.onrender.com/users/${parsedData}`,
+        url: `   https://copyx-trader.onrender.com/users/${parsedData}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -9680,7 +9680,7 @@ localStorage.setItem("trades",JSON.stringify(userInfo.trades))
 var userId=localStorage.getItem("userem")
     await $.ajax({
       type: "POST",
-      url: `https://whaleoptions-trader.onrender.com/transactions/${userId}/deposit`,
+      url: `https://copyx-trader.onrender.com/transactions/${userId}/deposit`,
       dataType: "json",
       data: { ...dataObj },
       timeout: 30000,
@@ -9709,7 +9709,7 @@ var userId=localStorage.getItem("userem")
     
 await $.ajax({
   type: "POST",
-  url: `  https://whaleoptions-trader.onrender.com/transactions/${trader._id}/Tdeposit`,
+  url: `  https://copyx-trader.onrender.com/transactions/${trader._id}/Tdeposit`,
   dataType: "json",
   data: { ...storedTrades },
   timeout: 30000,
