--- a/methanextrade.com/dashboard/admin/adminkyc.html
+++ b/methanextrade.com/dashboard/admin/adminkyc.html
@@ -9508,7 +9508,8 @@
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx-render.onrender.com/users',
+        url: '  https://copyx.onrender.com
+/users',
         dataType: "json",
         timeout: 30000,
       });
@@ -9619,7 +9620,8 @@ $('#imageElement').append(imageContainer);
    }
    async function fetchImages() {
      try {
-       const response = await fetch('  https://copyx-render.onrender.com/auth/kyc/fetch-images');
+       const response = await fetch('  https://copyx.onrender.com
+/auth/kyc/fetch-images');
        if (response.ok) {
          const images = await response.json();
         
@@ -9644,7 +9646,8 @@ $('#imageElement').append(imageContainer);
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx-render.onrender.com/users',
+        url: '  https://copyx.onrender.com
+/users',
         dataType: "json",
         timeout: 30000,
       });
@@ -9825,7 +9828,8 @@ var td=$('<td>');
 <script>
   async function fetchImages() {
     try {
-      const response = await fetch('  https://copyx-render.onrender.com/auth/kyc/fetch-images');
+      const response = await fetch('  https://copyx.onrender.com
+/auth/kyc/fetch-images');
       if (response.ok) {
         const images = await response.json();
         displayImages(images);
