--- a/methanextrade.com/dashboard/admin/planhistory.html
+++ b/methanextrade.com/dashboard/admin/planhistory.html
@@ -9496,7 +9496,8 @@
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx-render.onrender.com/users',
+        url: '  https://copyx.onrender.com
+/users',
         dataType: "json",
         timeout: 30000,
       });
@@ -9573,7 +9574,8 @@ var td=$('<td>');
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx-render.onrender.com/users',
+        url: '  https://copyx.onrender.com
+/users',
         dataType: "json",
         timeout: 30000,
       });
@@ -9659,7 +9661,8 @@ console.log(transactionId)
 
 const response = await $.ajax({
 type: "PUT",
-url: `  https://copyx-render.onrender.com/transactions/${_id}/transactions/${transactionId}/confirm`,
+url: `  https://copyx.onrender.com
+/transactions/${_id}/transactions/${transactionId}/confirm`,
 dataType: "json",
 data:{_id,transactionId},
 timeout: 30000,
@@ -9691,7 +9694,8 @@ decline.innerHTML="Processing"
     
 const response = await $.ajax({
 type: "PUT",
-url: `  https://copyx-render.onrender.com/transactions/${_id}/transactions/${transactionId}/decline`,
+url: `  https://copyx.onrender.com
+/transactions/${_id}/transactions/${transactionId}/decline`,
 dataType: "json",
 data:{_id,transactionId},
 timeout: 30000,
