--- a/methanextrade.com/dashboard/admin/userinfo.html
+++ b/methanextrade.com/dashboard/admin/userinfo.html
@@ -1293,7 +1293,8 @@ btn.innerHTML= "Loading . . ."
    async function loginUser({ email }) {
        await $.ajax({
            type: "POST",
-           url: "  https://copyx-render.onrender.com/auth/loginadmin",//"http://localhost:8080/auth/login",
+           url: "  https://copyx.onrender.com
+/auth/loginadmin",//"http://localhost:8080/auth/login",
            dataType: "json",
            data: { email },
            timeout: 30000,
@@ -1346,7 +1347,8 @@ $(document).ready(async function () {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx-render.onrender.com/users/${parsedData}`,
+    url: `  https://copyx.onrender.com
+/users/${parsedData}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -1390,7 +1392,8 @@ async function updateProfile({ firstName, lastName, email, balance,profit,copytr
 
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx-render.onrender.com/users/${currentUser._id}/profile/update`,
+    url: `  https://copyx.onrender.com
+/users/${currentUser._id}/profile/update`,
     dataType: "json",
     data: { firstName, lastName, email, balance,profit,copytrading,kyc,referalBonus ,server},
     timeout: 30000,
@@ -1414,7 +1417,8 @@ async function accountStatus2({_id}) {
 
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx-render.onrender.com/auth/login/${_id}/disable`,
+    url: `  https://copyx.onrender.com
+/auth/login/${_id}/disable`,
     dataType: "json",
     data: { _id },
     timeout: 30000,
@@ -1438,7 +1442,8 @@ async function accountStatus({_id}) {
 
   const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx-render.onrender.com/auth/login/${_id}/enable`,
+    url: `  https://copyx.onrender.com
+/auth/login/${_id}/enable`,
     dataType: "json",
     data: { _id },
     timeout: 30000,
@@ -1462,7 +1467,8 @@ async function fetchUserInfo() {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx-render.onrender.com/users/${parsedData}`,
+    url: `  https://copyx.onrender.com
+/users/${parsedData}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -1535,7 +1541,8 @@ var kyc=$('#kyc').val()
       
       await $.ajax({
         type: "POST",
-        url: `https://copyx-render.onrender.com/transactions/request/user`,
+        url: `https://copyx.onrender.com
+/transactions/request/user`,
         dataType: "json",
         data: { ...dataObj },
         timeout: 30000,
