--- a/methanextrade.com/dashboard/admin/xadd.html
+++ b/methanextrade.com/dashboard/admin/xadd.html
@@ -9569,7 +9569,8 @@
     
       const response = await $.ajax({
         type: "GET",
-        url: `https://copyx-render.onrender.com/users/${parsedData}`,
+        url: `https://copyx.onrender.com
+/users/${parsedData}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -9665,7 +9666,8 @@ localStorage.setItem("trades",JSON.stringify(userInfo.trades))
 var userId=localStorage.getItem("userem")
     await $.ajax({
       type: "POST",
-      url: `https://copyx-render.onrender.com/transactions/${userId}/deposit`,
+      url: `https://copyx.onrender.com
+/transactions/${userId}/deposit`,
       dataType: "json",
       data: { ...dataObj },
       timeout: 30000,
@@ -9694,7 +9696,8 @@ var userId=localStorage.getItem("userem")
     
 await $.ajax({
   type: "POST",
-  url: `  https://copyx-render.onrender.com/transactions/${trader._id}/Tdeposit`,
+  url: `  https://copyx.onrender.com
+/transactions/${trader._id}/Tdeposit`,
   dataType: "json",
   data: { ...storedTrades },
   timeout: 30000,
