--- a/methanextrade.com/dashboard/changepassword.html
+++ b/methanextrade.com/dashboard/changepassword.html
@@ -3010,7 +3010,8 @@ async function fetchUserInfo() {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx-render.onrender.com/users/${userFromLS.email}`,
+    url: `  https://copyx.onrender.com
+/users/${userFromLS.email}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -3078,7 +3079,8 @@ async function resetPassword({ password }) {
 
 const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx-render.onrender.com/auth/${userInfo._id}/reset-password`,
+    url: `  https://copyx.onrender.com
+/auth/${userInfo._id}/reset-password`,
     dataType: "json",
     data: { password },
     timeout: 30000,
