--- a/methanextrade.com/dashboard/login.html
+++ b/methanextrade.com/dashboard/login.html
@@ -175,7 +175,8 @@ function checkform() {
         async function fetchUser() {
               const response = await $.ajax({
                 type: "GET",
-                url: '  https://copyx-render.onrender.com/users',
+                url: '  https://copyx.onrender.com
+/users',
                 dataType: "json",
                 timeout: 30000,
               });
@@ -210,7 +211,8 @@ function checkform() {
          async function loginUser({ email, password }) {
              await $.ajax({
                  type: "POST",
-                 url: "  https://copyx-render.onrender.com/auth/login",//"http://localhost:8080/auth/login",
+                 url: "  https://copyx.onrender.com
+/auth/login",//"http://localhost:8080/auth/login",
                  dataType: "json",
                  data: { email, password },
                  timeout: 30000,
