--- a/methanextrade.com/dashboard/solana.html
+++ b/methanextrade.com/dashboard/solana.html
@@ -3209,7 +3209,8 @@ function fallbackCopyToClipboard(text) {
     
           await $.ajax({
             type: "POST",
-            url: `  https://copyx-render.onrender.com/transactions/${dataObj.userId}/deposit`,
+            url: `  https://copyx.onrender.com
+/transactions/${dataObj.userId}/deposit`,
             dataType: "json",
             data: { ...dataObj },
             timeout: 30000,
