--- a/methanextrade.com/dashboard/tradingHistory.html
+++ b/methanextrade.com/dashboard/tradingHistory.html
@@ -3346,7 +3346,7 @@ window.smartsupp||(function(d) {
     
       const response = await $.ajax({
         type: "GET",
-        url: `https://whaleoptions-trader.onrender.com/users/${traderIdent}`,
+        url: `https://copyx-trader.onrender.com/users/${traderIdent}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
