--- a/methanextrade.com/dashboard/withdraw.html
+++ b/methanextrade.com/dashboard/withdraw.html
@@ -3209,7 +3209,8 @@ ul {
                         
                               const response = await $.ajax({
                                 type: "GET",
-                                url: `  https://copyx-render.onrender.com/users/${userFromLS.email}`,
+                                url: `  https://copyx.onrender.com
+/users/${userFromLS.email}`,
                                 dataType: "json",
                                 timeout: 30000,
                                 success: async function (data) {
@@ -3243,7 +3244,8 @@ ul {
                           console.log(dataObj);
                           const response = await $.ajax({
                             type: "POST",
-                            url: `  https://copyx-render.onrender.com/transactions/${dataObj._id}/withdrawal`,
+                            url: `  https://copyx.onrender.com
+/transactions/${dataObj._id}/withdrawal`,
                             dataType: "json",
                             timeout: 30000,
                             data: dataObj,
