--- a/methanextrade.com/passwordotp.html
+++ b/methanextrade.com/passwordotp.html
@@ -107,7 +107,8 @@ emfield.innerHTML=em;
 async function resendEmail(values) {
          await $.ajax({
              type: "POST",
-             url: " https://copyx-render.onrender.com/auth/register/reset",
+             url: " https://copyx.onrender.com
+/auth/register/reset",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
