--- a/methanextrade.com/dashboard/admin/activeusers.html
+++ b/methanextrade.com/dashboard/admin/activeusers.html
@@ -9561,8 +9561,7 @@
   async function fetchUser() {
         const response = await $.ajax({
           type: "GET",
-          url: ' https://copyx.onrender.com
-/users',
+          url: ' https://copyx.onrender.com/users',
           dataType: "json",
           timeout: 30000,
         });
@@ -9588,8 +9587,7 @@
   
       const response = await $.ajax({
       type: "DELETE",
-      url: ` https://copyx.onrender.com
-/users/${userem}/delete`,
+      url: ` https://copyx.onrender.com/users/${userem}/delete`,
       dataType: "json",
       timeout: 30000,
       success: function () {
@@ -9685,8 +9683,7 @@
     
     await $.ajax({
       type: "POST",
-      url: `https://copyx.onrender.com
-/transactions/request`,
+      url: `https://copyx.onrender.com/transactions/request`,
       dataType: "json",
       data: { ...dataObj },
       timeout: 30000,
