--- a/methanextrade.com/dashboard/admin/adminreferral.html
+++ b/methanextrade.com/dashboard/admin/adminreferral.html
@@ -9528,8 +9528,7 @@
     
           const response = await $.ajax({
             type: "GET",
-            url: `  https://copyx.onrender.com
-/users/${userFromLS.email}`,
+            url: `  https://copyx.onrender.com/users/${userFromLS.email}`,
             dataType: "json",
             timeout: 30000,
             success: async function (data) {
