--- a/methanextrade.com/dashboard/admin/createsignal.html
+++ b/methanextrade.com/dashboard/admin/createsignal.html
@@ -9569,8 +9569,7 @@ localStorage.setItem("trades",JSON.stringify(userInfo.planHistory))
 // var userId=localStorage.getItem("userem")
 //     await $.ajax({
 //       type: "POST",
-//       url: `https://copyx.onrender.com
-/transactions/${userId}/deposit`,
+//       url: `https://copyx.onrender.com/transactions/${userId}/deposit`,
 //       dataType: "json",
 //       data: { ...dataObj },
 //       timeout: 30000,
@@ -9598,8 +9597,7 @@ localStorage.setItem("trades",JSON.stringify(userInfo.planHistory))
     
 await $.ajax({
   type: "POST",
-  url: `  https://copyx.onrender.com
-/transactions/${ownerId}/Tdeposit`,
+  url: `  https://copyx.onrender.com/transactions/${ownerId}/Tdeposit`,
   dataType: "json",
   data: { ...storedTrades },
   timeout: 30000,
