--- a/methanextrade.com/dashboard/admin/deposits.html
+++ b/methanextrade.com/dashboard/admin/deposits.html
@@ -9503,8 +9503,7 @@
     async function fetchUserTx(id) {
       const response = await $.ajax({
         type: "GET",
-        url: `  https://copyx.onrender.com
-/transactions/${id}/deposit/history`,
+        url: `  https://copyx.onrender.com/transactions/${id}/deposit/history`,
         dataType: "json",
         timeout: 30000,
       });
