--- a/methanextrade.com/dashboard/admin/edit.html
+++ b/methanextrade.com/dashboard/admin/edit.html
@@ -9587,8 +9587,7 @@
 
       const response = await $.ajax({
         type: "GET",
-        url: `  https://copyx.onrender.com
-/users/${userFromLS.email}`,
+        url: `  https://copyx.onrender.com/users/${userFromLS.email}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -9624,8 +9623,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `  https://copyx.onrender.com
-/users/${currentUser._id}/profile/update`,
+        url: `  https://copyx.onrender.com/users/${currentUser._id}/profile/update`,
         dataType: "json",
         data: { firstName, lastName, email },
         timeout: 30000,
@@ -9658,8 +9656,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `  https://copyx.onrender.com
-/users/${currentUser._id}/accounts/update`,
+        url: `  https://copyx.onrender.com/users/${currentUser._id}/accounts/update`,
         dataType: "json",
         data: { 'values': JSON.stringify(cummulative) },
         timeout: 30000,
@@ -9713,8 +9710,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `  https://copyx.onrender.com
-/auth/${currentUser._id}/reset-password`,
+        url: `  https://copyx.onrender.com/auth/${currentUser._id}/reset-password`,
         dataType: "json",
         data: { password },
         timeout: 30000,
