--- a/methanextrade.com/dashboard/admin/trader.html
+++ b/methanextrade.com/dashboard/admin/trader.html
@@ -1290,8 +1290,7 @@ const cloudName = 'dsyjlantq';
       //     console.log(imageUrl);
       //     $.ajax({
       //         type: 'POST',
-      //         url: '  https://copyx.onrender.com
-/auth/kyc',
+      //         url: '  https://copyx.onrender.com/auth/kyc',
       //         dataType: 'json',
       //         data: { imageUrl },
       //         timeout: 30000,
