--- a/methanextrade.com/dashboard/admin/withdrawalrequests.html
+++ b/methanextrade.com/dashboard/admin/withdrawalrequests.html
@@ -9505,8 +9505,7 @@
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
-        url: '  https://copyx.onrender.com
-/users',   
+        url: '  https://copyx.onrender.com/users',   
         dataType: "json",
         timeout: 30000,
       });
@@ -9592,8 +9591,7 @@ console.log(transactionId)
 
 const response = await $.ajax({
 type: "PUT",
-url: `  https://copyx.onrender.com
-/transactions/${_id}/withdrawals/${transactionId}/confirm`,
+url: `  https://copyx.onrender.com/transactions/${_id}/withdrawals/${transactionId}/confirm`,
 dataType: "json",
 data:{_id,transactionId},
 timeout: 30000,
@@ -9624,8 +9622,7 @@ async function declineUserDetail(details){
     
 const response = await $.ajax({
 type: "PUT",
-url: `  https://copyx.onrender.com
-/transactions/${_id}/withdrawals/${transactionId}/decline`,
+url: `  https://copyx.onrender.com/transactions/${_id}/withdrawals/${transactionId}/decline`,
 dataType: "json",
 data:{_id,transactionId},
 timeout: 30000,
