--- a/methanextrade.com/dashboard/autocopyhistory.html
+++ b/methanextrade.com/dashboard/autocopyhistory.html
@@ -3431,8 +3431,7 @@ $(document).ready(async function () {
 
   const response = await $.ajax({
     type: "GET",
-    url: `https://copyx.onrender.com
-/users/${traderIdent}`,
+    url: `https://copyx.onrender.com/users/${traderIdent}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
