--- a/methanextrade.com/dashboard/passwords.html
+++ b/methanextrade.com/dashboard/passwords.html
@@ -2205,8 +2205,7 @@ async function fetchUserInfo() {
 
   const response = await $.ajax({
     type: "GET",
-    url: `  https://copyx.onrender.com
-/users/${userFromLS.email}`,
+    url: `  https://copyx.onrender.com/users/${userFromLS.email}`,
     dataType: "json",
     timeout: 30000,
     success: async function (data) {
@@ -2260,8 +2259,7 @@ await resetPassword({ password })
 async function resetPassword({ password }) {
 const response = await $.ajax({
     type: "PUT",
-    url: `  https://copyx.onrender.com
-/auth/${currentUser._id}/reset-password`,
+    url: `  https://copyx.onrender.com/auth/${currentUser._id}/reset-password`,
     dataType: "json",
     data: { password },
     timeout: 30000,
