--- a/methanextrade.com/user/login.html
+++ b/methanextrade.com/user/login.html
@@ -375,7 +375,7 @@ SignIn
     <div class="text-dark text-center fw-semibold fs-6">
         Do not have an account?
 
-        <a href="./user/register.html" class="link-primary">
+        <a href="./register.html" class="link-primary">
             Sign Up
         </a>
     </div>
